--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
